client/src/components/scss/Modal.scss
@import "./variables";

// .modal{
//   // all: unset;
//   z-index: 1000;
// }

.modal-content {
  border-radius: 20px;
  min-width: 470px;
  &:focus {
    outline: none;
  }
}
.custom-modal {
  position: relative;
  width: 100%;

  height: 100%;
  padding-left: 25px;
  padding-right: 25px;
  padding-bottom: 20px;
  .header {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 15px;
    position: relative;
    border-bottom: solid $accent;
    text-align: center;
    .title {
      font-size: 32px;
      position: relative;
    }
    .cancel {
      position: absolute;
      border: none;
      color: $accent;
      font-size: 100%;
      font-weight: 600;
      line-height: 68px;
      transform: rotate(-45deg);
      right: -4px;
      top: -8px;
      width: 25px;
      height: 68px;
      padding: 0px;
      fill: none;
      background-color: transparent;
      &:focus {
        outline: none;
      }
    }
  }

  .body {
    margin-top: auto;
    margin-bottom: auto;
    text-align: center;
    position: relative;
    .text {
      font-size: 18px;
    }
    .item-name {
      font-size: 32px;
    }
    .rsvp-label {
      margin-top: 24px;
      font-size: 18px;
      line-height: 21px;
    }
    .name-input-container {
      width: 100%;
      height: 42px;
      background: #f7f7f7;
      margin: 12px auto 0px auto;
      border-radius: 4px !important;
      border: none;
      .name-input {
        padding-top: auto;
        margin: auto;
        font-weight: 600;
        font-size: 18px;
        line-height: 21px;
        opacity: 0.3;
        border: inherit;
        width: 100%;
        height: 100%;
      }
    }

    .items-body {
      height: 100%;
      width: 399px;
      margin: 39px auto 0px auto;
      padding: 9px 10px 27px 13px;
      box-shadow: 0px 5px 20px rgba(31, 11, 73, 0.15);
      border-radius: 10px;
      overflow: hidden;
      .head {
        display: flex;
        .head-float {
          top: 2px;
          margin-right: 8px;
        }
        .item-input {
          position: relative;
          opacity: 1;
          width: 100%;
          border: none;
          color: black;
          font-weight: 600;
          font-size: 18px;
          line-height: 21px;
          background-color: #f7f7f7;
          // background-color: blue;
          &:focus {
            outline: none;
          }
        }
      }
      .symbol {
        position: relative;
        width: 18px;
        height: 18px;
        text-align: center;
        border-radius: 4px;
        background-color: #fff6df;
        color: $text-color;
        line-height: 19px;
        top: 10px;
      }
      .filled {
        background-color: $primary;
      }

      .add-ingredient {
        display: flex;
        line-height: 20px;
        height: 18px;
        margin-left: 9px;

        .add-button {
          color: $primary;
          opacity: 1 !important;
          font-size: 14px;
          width: 110px;
          &:focus {
            outline: none;
          }
        }
      }

      .ingredient-form-container {
        position: relative;
        border: none;
        width: 100%;
        margin-left: 9px;
        font-size: 14px;
        height: 100%;
        .ingredient-item {
          display: flex;
          padding-right: 10px;

          .lead {
            position: relative;
            // top: 28px;
            height: 18px;
          }

          .ingredient-form {
            margin-top: 7px;
            margin-left: 8px;
            opacity: 1;
            width: 100%;
            border: none;
            color: black;
            background-color: #f7f7f7;
            // background-color: pink;
            height: 26px;
            &:focus {
              outline: none;
            }
          }
        }
      }
    }

    .name-support {
      font-size: 10px;
      line-height: 12px;
      margin-top: 10.5px;
    }
  }
  .footer {
    width: 100%;
    display: flex;
    position: relative;
    margin-top: 41px;
    margin-left: auto;
    margin-right: auto;
    .save-changes {
      color: $text-color;
      font-size: 18px;
      line-height: 21px;
      font-weight: 800;
      position: relative;
      bottom: 5px;
      margin-left: auto;
      right: 0px;
      border: none;
      width: 242px;
      height: 50px;
      background-color: $accent;
    }
    .add-item {
      position: relative;
      // top: 27px;
      left: 45%;
      width: 242px;
      height: 50px;
      background-color: $accent;
    }
  }
}

#people-container {
  color: $text-color;
}

#count {
  font-weight: 600;
  text-transform: uppercase;
}

#attendees {
  width: 388px;
  overflow-wrap: break-word;
  font-size: 12px;
  font-weight: 200;
  opacity: 0.5;
}

.attendee {
  padding-left: 3px;
  height: 50%;
}

